--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>hweeks.com</title>
     <link rel="stylesheet" href="/app.css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.11.0/styles/github.min.css">
     <script src="/app.js"></script>
     <script>require('initialize');</script>
   </head>
